...
    <string name="default_room_icon_content_description">default room icon</string>
    <string name="status_free">Free</string>
    <string name="free_for_the_day">for the day</string>
    <string name="free_for_specific_amount">for %1$s</string>
    <string name="status_reserved">Reserved</string>
    <string name="URL_Text">Base URL</string>
    <string name="InputBaseURL">Input your base URL here</string>
    <string name="API_Text">API Key</string>
    <string name="InputAPIKey">Input your API key here</string>
    <string name="LoginButton">Manual login</string>
    <string name="recognizeButton">Recognize me!</string>
    <string name="EnrollButton">Enroll user</string>
    <string name="LobbyCalendarButton">Calendar</string>
    <string name="title_activity_other_users">OtherUsersActivity</string>
    <string name="OtherUsersTitle">Are you among these %1$d best matches?</string>
...
